implementando PautaMapper e ajustando DTOs e testes